Push notifications and analytics

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         </provider>
 
         <meta-data android:name="google_analytics_automatic_screen_reporting_enabled" android:value="false" />
+        <meta-data android:name="firebase_inapp_messaging_auto_data_collection_enabled" android:value="true" />
     </application>
 
     <!-- Permissions -->
