--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -60,5 +60,7 @@
 	<true/>
 	<key>FirebaseAutomaticScreenReportingEnabled</key>
 	<false/>
+	<key>FirebaseInAppMessagingAutomaticDataCollectionEnabled</key>
+	<true/>
 </dict>
 </plist>
